--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -2,4 +2,5 @@
 @import url('global.less');
 @import url('template.less');
 @import url('page_profile.less');
+@import url('page_profile_settings.less');
 @import url('cheat-sheet.less');
