--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -1,6 +1,7 @@
 @import url('interface.less');
 @import url('global.less');
 @import url('template.less');
+@import url('mainpage.less');
 @import url('page_profile.less');
 @import url('page_profile_settings.less');
 @import url('cheat-sheet.less');
