--- a/consult/css/styles.css
+++ b/consult/css/styles.css
@@ -841,23 +841,35 @@ body.page-mainpage .modal#authorization-window .container .right p a {
   font-weight: bold;
 }
 /* line 88, mainpage.less */
-body.page-mainpage .modal#authorization-window .container a.sign-up {
+body.page-mainpage .modal#authorization-window .container .links {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 55px;
-  text-align: center;
   display: block;
+  text-align: center;
+  border-top: #b9d4cc 1px solid;
+  padding-top: 10px;
+}
+/* line 98, mainpage.less */
+body.page-mainpage .modal#authorization-window .container a.sign-up,
+body.page-mainpage .modal#authorization-window .container a.forgot-password {
   color: #35504e;
   font: 400 1.4rem Roboto;
-  line-height: 55px;
   text-decoration: none;
-  border-top: #b9d4cc 1px solid;
+  margin-top: 10px;
+  line-height: 26px;
 }
-/* line 100, mainpage.less */
-body.page-mainpage .modal#authorization-window .container a.sign-up span {
+/* line 104, mainpage.less */
+body.page-mainpage .modal#authorization-window .container a.sign-up span,
+body.page-mainpage .modal#authorization-window .container a.forgot-password span {
   color: #4ad0c5;
   font-weight: bold;
+}
+/* line 108, mainpage.less */
+body.page-mainpage .modal#authorization-window .container a.sign-up.forgot-password,
+body.page-mainpage .modal#authorization-window .container a.forgot-password.forgot-password {
+  font-size: 1.2rem;
 }
 /* line 1, page_profile.less */
 .wrapper {
