--- a/consult/less/mainpage.less
+++ b/consult/less/mainpage.less
@@ -85,21 +85,28 @@ body.page-mainpage{
                     }
                 }
             }
-            a.sign-up{
+            .links{
                 position: absolute;
                 bottom:0;
                 width:100%;
                 height:55px;
-                text-align: center;
                 display: block;
+                text-align: center;
+                border-top:#b9d4cc 1px solid;
+                padding-top: 10px;
+            }
+            a.sign-up, a.forgot-password{
                 color: #35504e;
                 font: 400 1.4rem Roboto;
-                line-height: 55px;
                 text-decoration: none;
-                border-top:#b9d4cc 1px solid;
+                margin-top:10px;
+                line-height:26px;
                 span{
                     color:@sky;
                     font-weight: bold;
+                }
+                &.forgot-password{
+                    font-size:1.2rem;
                 }
             }
         }
