--- a/consult/less/mainpage.less
+++ b/consult/less/mainpage.less
@@ -3,7 +3,7 @@ body.page-mainpage{
         margin-left: -16px !important;
         margin-top: 0 !important;
     }
-    .modal#authorization-window{
+    .modal#authorization-window, .modal#registration-window{
         padding-bottom: 0;
         
         .container{
@@ -95,7 +95,7 @@ body.page-mainpage{
                 border-top:#b9d4cc 1px solid;
                 padding-top: 10px;
             }
-            a.sign-up, a.forgot-password{
+            a.sign-up, a.forgot-password, a.sign-in{
                 color: #35504e;
                 font: 400 1.4rem Roboto;
                 text-decoration: none;
