--- a/consult/css/styles.css
+++ b/consult/css/styles.css
@@ -455,32 +455,48 @@ ul.badge-marked li {
   background: none;
 }
 /* line 1, global.less */
+.no-script-layout {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: #dbefe5;
+  z-index: 1000;
+}
+/* line 7, global.less */
+.no-script-layout .wrapper {
+  text-align: center;
+}
+/* line 9, global.less */
+.no-script-layout .wrapper h1 {
+  margin-top: 100px;
+}
+/* line 15, global.less */
 .clr {
   clear: both;
 }
-/* line 4, global.less */
+/* line 18, global.less */
 * {
   position: relative;
 }
-/* line 6, global.less */
+/* line 20, global.less */
 *:focus {
   outline: none;
 }
-/* line 10, global.less */
+/* line 24, global.less */
 ul {
   padding: 0;
   margin: 0;
   list-style: none;
 }
-/* line 15, global.less */
+/* line 29, global.less */
 .hidden {
   display: none;
 }
-/* line 18, global.less */
+/* line 32, global.less */
 a {
   color: #35504e;
 }
-/* line 23, global.less */
+/* line 37, global.less */
 header.header {
   width: 100%;
   padding: 10px 30px;
@@ -489,7 +505,7 @@ header.header {
   -moz-box-sizing: border-box;
   overflow: hidden;
 }
-/* line 30, global.less */
+/* line 44, global.less */
 header.header .logo {
   border-radius: 100%;
   -moz-border-radius: 100%;
@@ -500,7 +516,7 @@ header.header .logo {
   height: 40px;
   background: #4ad0c5;
 }
-/* line 40, global.less */
+/* line 54, global.less */
 header.header .title {
   display: block;
   float: left;
@@ -510,15 +526,15 @@ header.header .title {
   margin-top: 13px;
   margin-left: 10px;
 }
-/* line 49, global.less */
+/* line 63, global.less */
 header.header .sign-in {
   float: right;
 }
-/* line 56, global.less */
+/* line 70, global.less */
 header.header .profile-snippet {
   float: right;
 }
-/* line 58, global.less */
+/* line 72, global.less */
 header.header .profile-snippet .photo-container {
   border-radius: 50px;
   -o-border-radius: 50px;
@@ -530,60 +546,60 @@ header.header .profile-snippet .photo-container {
   overflow: hidden;
   border: solid 1px #8aa4a2;
 }
-/* line 68, global.less */
+/* line 82, global.less */
 header.header .profile-snippet .photo-container img {
   display: block;
   width: 100%;
 }
-/* line 73, global.less */
+/* line 87, global.less */
 header.header .profile-snippet .info {
   float: left;
   margin-left: 10px;
   margin-top: 5px;
 }
-/* line 77, global.less */
+/* line 91, global.less */
 header.header .profile-snippet .info .name {
   color: #35504e;
   font: 500 1.4rem Roboto;
 }
-/* line 81, global.less */
+/* line 95, global.less */
 header.header .profile-snippet .info .job {
   color: #4ad0c5;
   font: 400 1.2rem Roboto;
 }
-/* line 86, global.less */
+/* line 100, global.less */
 header.header .profile-snippet .more-container {
   float: left;
   margin-left: 10px;
   margin-top: 10px;
 }
-/* line 90, global.less */
+/* line 104, global.less */
 header.header .profile-snippet .more-container i {
   color: #35504e;
   font-size: 1.8rem;
   cursor: pointer;
 }
-/* line 95, global.less */
+/* line 109, global.less */
 header.header .profile-snippet .more-container .dropdown-menu {
   display: none;
 }
-/* line 101, global.less */
+/* line 115, global.less */
 header.header .profile-notifications {
   float: right;
   margin-right: 10px;
   margin-top: 10px;
 }
-/* line 105, global.less */
+/* line 119, global.less */
 header.header .profile-notifications > div {
   float: left;
   margin: 0 15px;
   cursor: pointer;
 }
-/* line 109, global.less */
+/* line 123, global.less */
 header.header .profile-notifications > div.active i.fa {
   color: #eb5245;
 }
-/* line 112, global.less */
+/* line 126, global.less */
 header.header .profile-notifications > div .count {
   position: absolute;
   border-radius: 50px;
@@ -598,29 +614,29 @@ header.header .profile-notifications > div .count {
   z-index: 1;
   font: 500 1.1rem / 17px Roboto;
 }
-/* line 126, global.less */
+/* line 140, global.less */
 header.header .profile-notifications > div i.fa {
   color: #8aa4a2;
   font-size: 2.0rem;
 }
-/* line 132, global.less */
+/* line 146, global.less */
 header.header .mainmenu {
   float: right;
   margin: 9px 0;
 }
-/* line 135, global.less */
+/* line 149, global.less */
 header.header .mainmenu li {
   float: left;
   text-transform: uppercase;
   font: 500 1.2rem Roboto;
   margin-right: 30px;
 }
-/* line 140, global.less */
+/* line 154, global.less */
 header.header .mainmenu li a {
   color: #35504e;
   text-decoration: none;
 }
-/* line 147, global.less */
+/* line 161, global.less */
 .user-menu-section {
   background: #f8f8f8;
   overflow: hidden;
@@ -630,70 +646,70 @@ header.header .mainmenu li a {
   -moz-box-shadow: 1px 2px 0px 0px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 1px 2px 0px 0px rgba(0, 0, 0, 0.1);
 }
-/* line 156, global.less */
+/* line 170, global.less */
 .user-menu-section .wrapper .user-menu-container {
   right: 50%;
   float: right;
 }
-/* line 160, global.less */
+/* line 174, global.less */
 .user-menu-section .wrapper .user-menu {
   left: 50%;
   float: left;
 }
-/* line 163, global.less */
+/* line 177, global.less */
 .user-menu-section .wrapper .user-menu li {
   margin: 0 10px;
   float: left;
 }
-/* line 167, global.less */
+/* line 181, global.less */
 .user-menu-section .wrapper .user-menu a {
   color: #35504e;
   font: 400 1.4rem  Roboto;
   text-decoration: none;
 }
-/* line 171, global.less */
+/* line 185, global.less */
 .user-menu-section .wrapper .user-menu a:hover {
   text-decoration: underline;
 }
-/* line 180, global.less */
+/* line 194, global.less */
 .footer {
   width: 100%;
   margin-top: 20px;
 }
-/* line 183, global.less */
+/* line 197, global.less */
 .footer a {
   text-decoration: none;
   color: #ffffff;
 }
-/* line 187, global.less */
+/* line 201, global.less */
 .footer section.library {
   background: #4ad0c5;
   padding: 10px 0 20px 0;
 }
-/* line 190, global.less */
+/* line 204, global.less */
 .footer section.library .title {
   float: left;
   width: 25%;
 }
-/* line 193, global.less */
+/* line 207, global.less */
 .footer section.library .title h3 {
   color: #ffffff;
 }
-/* line 197, global.less */
+/* line 211, global.less */
 .footer section.library .library-list {
   float: right;
   width: 75%;
   margin-top: 8px;
 }
-/* line 201, global.less */
+/* line 215, global.less */
 .footer section.library .library-list h4 {
   color: #ffffff;
 }
-/* line 204, global.less */
+/* line 218, global.less */
 .footer section.library .library-list .items-container {
   width: 100%;
 }
-/* line 206, global.less */
+/* line 220, global.less */
 .footer section.library .library-list .items-container .item {
   float: left;
   width: 33%;
@@ -701,17 +717,17 @@ header.header .mainmenu li a {
   font: 400 1.6rem Roboto;
   margin: 5px 0;
 }
-/* line 212, global.less */
+/* line 226, global.less */
 .footer section.library .library-list .items-container .item:hover {
   text-decoration: underline;
 }
-/* line 219, global.less */
+/* line 233, global.less */
 .footer section.bottom {
   background: #41b6ad;
   padding: 15px 0;
   overflow: hidden;
 }
-/* line 223, global.less */
+/* line 237, global.less */
 .footer section.bottom p.copyright {
   display: block;
   float: left;
@@ -719,21 +735,21 @@ header.header .mainmenu li a {
   font: 500 1.4rem Roboto;
   margin-left: 30px;
 }
-/* line 230, global.less */
+/* line 244, global.less */
 .footer section.bottom ul.footer-menu {
   float: right;
   margin-top: 13px;
 }
-/* line 233, global.less */
+/* line 247, global.less */
 .footer section.bottom ul.footer-menu li {
   float: left;
   margin-right: 30px;
 }
-/* line 236, global.less */
+/* line 250, global.less */
 .footer section.bottom ul.footer-menu li a {
   font: 400 14px Roboto;
 }
-/* line 238, global.less */
+/* line 252, global.less */
 .footer section.bottom ul.footer-menu li a:hover {
   text-decoration: underline;
 }
