--- a/consult/less/global.less
+++ b/consult/less/global.less
@@ -1,3 +1,17 @@
+.no-script-layout{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #dbefe5;
+    z-index: 1000;
+    .wrapper{
+        text-align: center;
+        h1{
+            margin-top: 100px;
+        }
+    }
+}
+
 .clr{
     clear:both;
 }
