--- a/consult/less/mainpage.less
+++ b/consult/less/mainpage.less
@@ -19,7 +19,7 @@ body.page-mainpage{
             }
         }
         .container{
-            padding-bottom: 80px;
+            padding-bottom: 60px;
             h1{
                 color: @sea;
                 font: 500 2.4rem Roboto;
@@ -79,6 +79,16 @@ body.page-mainpage{
                         }
                     }
                 }
+                p{
+                    color:@sea_light;
+                    text-align: center;
+                    font-size:1.2rem;
+                    line-height: 150%;
+                    a{
+                        color:@sky;
+                        text-decoration: underline;
+                    }
+                }
             }
             .right{
                 width: 255px;
@@ -101,7 +111,6 @@ body.page-mainpage{
                 position: absolute;
                 bottom:0;
                 width:100%;
-                height:55px;
                 display: block;
                 text-align: center;
                 border-top:#b9d4cc 1px solid;
